<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context=".success">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="304dp"
            android:layout_height="216dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            app:srcCompat="@drawable/succesfull" />

        <TextView
            android:id="@+id/success"
            android:layout_width="235dp"
            android:layout_height="85dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/success"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349" />

        <TextView
            android:id="@+id/Yourpaymentwassuccessful"
            android:layout_width="342dp"
            android:layout_height="37dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.478" />

        <TextView
            android:id="@+id/sendmail"
            android:layout_width="225dp"
            android:layout_height="145dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/sendmail"
            android:textAlignment="center"
            android:textColor="#7E7777"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.627" />

        <Button
            android:id="@+id/back"
            android:layout_width="283dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/status_bar_yellow"
            android:text="@string/back"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.78" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/orange"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Icon -->
        <ImageView
            android:id="@+id/homeicon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/homepage"
            app:tint="@color/white" />

        <!-- Search Icon -->
        <ImageView
            android:id="@+id/searchicon1"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/searchicon1"
            app:tint="@color/white" />

        <!-- Profile Icon -->
        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/profileicon"
            app:tint="@color/white" />

        <!-- Cart Icon -->
        <ImageView
            android:id="@+id/cartIcon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/carticon"
            app:tint="@color/white" />

        <!-- More Icon -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>